# schichtplan

./: .coverage  .cursorignore  .cursorindexingignore  .editorconfig  .env.example  .eslintignore  .gitattributes  .gitignore  .prettierignore  =0.3.0  ADD_SCHEDULE_KEYHOLDER_COMPLETE.md  AI_DASHBOARD_INTEGRATION_PLAN.md  AI_DATA_OPTIMIZATION_SUMMARY.md  AI_DEEP_INTEGRATION_IMPLEMENTATION_SUMMARY.md  AI_DEEP_INTEGRATION_MILESTONE_SUMMARY.md  AI_DEEP_INTEGRATION_STATUS_UPDATE.md  AI_DEEP_INTEGRATION_TASKPLAN.md  AI_SCHEDULE_INTEGRATION.md  AVAILABILITY_ENHANCEMENT.md  CONVERSATIONAL_AI_README.md  Dockerfile  Finishing #1  IMPLEMENTATION_SUMMARY.md  KEYHOLDER_IMPLEMENTATION_SUMMARY.md  KEYHOLDER_SAVE_DEBUG.md  KEYHOLDER_SAVE_FIXES_COMPLETE.md  MCP_CRUD_EXTENSION_PLAN.md  MCP_CRUD_SOLUTION_SUMMARY.md  MCP_ENHANCEMENT_SUMMARY.md  MCP_INTEGRATION_GUIDE.md  MCP_INTEGRATION_SUMMARY.md  MCP_QUICK_START.md  MCP_SERVER_README.md  Makefile  PDF_LAYOUT_CUSTOMIZER_README.md  PROJECT_TASKS.md  README.md  RENAMING_SUGGESTIONS.md  SCHEDULER_ENHANCEMENTS.md  SCHEDULE_INTEGRATION_GUIDE.md  (+94 more)
.cursor/: Dockerfile  analysis.md  bugs  detailed_taskplan.md  environment.json  ideas  journal  knowledge-graph.json  tasks  tasks.json
.cursor/rules/: Anforderungskatalog.mdc  add-shift-dialog-logic.mdc  api-documentation.mdc  availability-api-endpoints.mdc  file-system.mdc  (+8 more)
.plandex-v2/: projects-v2.json
docs/: Beschäftigungsmodelle.md
examples/: mcp_client_examples.py  mcp_crud_examples.py
instance/: app.db  data.db  schichtplan.db
refactoring/: PROMPT.md
scripts/: setup_mcp_integration.py
src/: test_summary.md
templates/: index.html
tests/: conftest.py  test_api.py  test_edge_cases.py  test_image_processing.py  test_integration.py  test_performance.py
(+1109 files in other folders)
